--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,8 @@ jobs:
         run: |
           sudo apt-get -y update
           sudo apt-get -y install build-essential make libzip-dev libcurl4-openssl-dev libexif-dev libxinerama-dev
+          # Add FreeImage library
+          sudo apt-get -y install libfreeimage-dev
       
       - name: Build Release Binaries
         run: |
