--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,37 @@
 {
     "files.associations": {
+        ".gitignore.genai": "ignore",
         "comic_viewer.h": "c",
         "stdbool.h": "c",
         "random": "c",
         "chrono": "c",
         "typeindex": "c",
-        "typeinfo": "c"
+        "typeinfo": "c",
+        "sdl.h": "c",
+        "math.h": "c",
+        "types.h": "c",
+        "sdl_image.h": "c",
+        "sdl_platform_defines.h": "c",
+        "string.h": "c",
+        "comic_loaders.h": "c",
+        "format": "c",
+        "fstream": "c",
+        "*.inc": "c",
+        "cstdlib": "c",
+        "bit": "c",
+        "condition_variable": "c",
+        "unordered_map": "c",
+        "unordered_set": "c",
+        "algorithm": "c",
+        "istream": "c",
+        "limits": "c",
+        "mutex": "c",
+        "ranges": "c",
+        "shared_mutex": "c",
+        "streambuf": "c",
+        "array": "c",
+        "string": "c",
+        "string_view": "c",
+        "span": "c"
     }
 }
